# src/routes/userRoute.js
@@ -1,0 +1,9 @@
+const express = require("express");
+
+const { signinUser } = require("../controllers/userContorller");
+
+const router = express.Router();
+
+router.post("/signin", signinUser);
+
+modules.export = router;
